--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
-.idea
+env/config.env
+.cache
+build
+dist
 node_modules
+npm-debug.log
+lint.xml
+.idea
+.vscode
+test-browser/reports/*
+babelify-src
+docs/_build
+.DS_Store
+.tern-port
+TODO
+soljson.js
+lerna-debug.log
+*~
+/tmp
