--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
-export default {
+{
     "baseUrl": ".",
     "paths": {
         "app/*": ["./app/*"],
-        "root/*": ["./*"],
-    },
+        "root/*": ["./*"]
+    }
 }
