--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "cacache": "^18.0.4",
     "dotenv": "^16.4.5",
     "isbot": "3",
+    "mongodb": "^6.9.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "remix-flat-routes": "^0.6.5",
     "sharp": "^0.33.4",
     "tailwind-variants": "^0.1.20"
@@ -31,6 +33,7 @@
     "@remix-run/dev": "^2.11.1",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^4.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
